--- a/Test after service/ITI-Hackathon.csproj
+++ b/Test after service/ITI-Hackathon.csproj
@@ -23,4 +23,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="a\" />
+  </ItemGroup>
+
 </Project>
